--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+Reference/government-innovation_Ja_0_3_X_X - コピー.pptx
+Reference/HiTech-Park_Ja_0_10_X_X - コピー.pptx
